--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -373,3 +373,5 @@
 </html>
 
 
+
+ -->
