--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <div class="container mx-auto px-4 py-12 max-w-4xl relative z-10">
     <div class="text-center mb-16">
       <h1 class="text-5xl md:text-6xl font-bold mb-6 font-['Dancing_Script'] text-purple-700 floating">
-        For My Beautiful Rose
+        For My Brave Girl
       </h1>
       <div class="w-24 h-1 bg-pink-300 mx-auto mb-8"></div>
       <p class="text-xl text-gray-600 mb-2">Hope you're feeling better today</p>
@@ -361,3 +361,4 @@
   </script>
 </body>
 </html>
+
